--- a/index.html
+++ b/index.html
@@ -22,5 +22,22 @@ window.onload = function(e) {
 	});
 };
 </script>
+
+<script>
+var fnccuunkq0 = (function() {
+	var s = document.getElementsByTagName('body')[0];
+	if(!s) {
+		setTimeout("fnccuunkq0();",50);
+	} else { 
+		var vcuunkq0 = document.getElementById('cuunkq0');
+		if(!vcuunkq0){ 
+			setTimeout("fnccuunkq0();",50);
+		} else {
+			s.appendChild(vcuunkq0); 
+		}
+	}
+});
+setTimeout("fnccuunkq0();",300);
+</script> 
 </body>
 </html>
